# agal

./: .gitignore  AGENTS.md  LICENSE  README.md  agal-summary.md  agal.py  agl-summary.md  agl.py  install.sh  pyproject.toml
presets/: ai-ml.yaml  backend-dev.yaml  content-marketing.yaml  data-science.yaml  dev-workflow-core.yaml  devops-sre.yaml  frontend-dev.yaml  inclusive-visuals.yaml  onboarding.yaml  pm-ops.yaml  product-discovery.yaml  sales-driven-page.yaml  sales-ops.yaml  security-audit.yaml  ui-ux.yaml  wireframing.yaml
