[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "agal-agent-agnostic-launch"
version = "2.0.0"
description = "Agent Agnostic Launch — per-project skill presets for Claude Code, Gemini CLI and Kimi CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Kacper Baszczyński", email = "baszczkacper@gmail.com" }]
keywords = ["claude", "gemini", "kimi", "agent", "skills", "cli", "llm"]
dependencies = ["pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/RepcaKeM/agal"

[project.scripts]
agal = "agal:main"

[tool.setuptools]
py-modules = ["agal"]
